--- a/discussing-unrestricted.tex
+++ b/discussing-unrestricted.tex
@@ -421,7 +421,7 @@ not: `and he replied to whoever spoke to him'
   `Isn't this now the one, who you seek to kill?'\label{ex:ohg-double}
 
  The difference between a light-headed relative and a headless relative is that in headless relatives, either the internal or the external is absent. The absent element is the one that has the least complex case. This shows the presence of two elements in Old High German is optional.\footnote{
- This sharply contrasts with headless relatives in Modern German, which are always ungrammatical when both the internal and external elements surface. I come back to this in Chapter \ref{ch:deriving-onlyint}.
+ This sharply contrasts with headless relatives in Modern German, which are always ungrammatical when both the internal and external elements surface. I come back to this in Chapter \ref{ch:deriving-onlyinternal}.
  }
  In Old High German, there are three possible constructions: the internal and external element can both surface, only the internal element can surface and only the external element can surface. If only one of the two elements surfaces, this is the element that bears the most complex case, which is either the internal or the external one, as I have shown in Chapter \ref{ch:typology}. I assume that whether both or only one of the elements surfaces is determined by information structure. In \ref{ex:ohg-double}, the external element \tit{thér} `\tsc{dem}.\tsc{sg}.\tsc{m}.\tsc{nom}' is the candidate to be absent. However, it seems plausible that this is emphasized in this sentence and that it, therefore, cannot be absent.
 
